Closed Bug 1089423 Opened 11 years ago Closed 11 years ago

crash in java.lang.IllegalStateException: at android.media.MediaCodec.dequeueInputBuffer(Native Method)

Categories

(Firefox for Android Graveyard :: General, defect)

36 Branch
All
Android
defect
Not set
critical

Tracking

(firefox34 verified, firefox35 verified, firefox36 verified, fennec35+)

VERIFIED FIXED
Firefox 36
Tracking Status
firefox34 --- verified
firefox35 --- verified
firefox36 --- verified
fennec 35+ ---

People

(Reporter: aaronmt, Assigned: snorp)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-faf177c8-006c-4b74-86d5-628672141025. ============================================================= java.lang.IllegalStateException at android.media.MediaCodec.dequeueInputBuffer(Native Method) at dalvik.system.NativeStart.run(Native Method) at dalvik.system.NativeStart.run(Native Method) Android CPU ABI
This is kind of a band aid until we start using generated JNI bindings which will hopefully make all of this a little nicer.
Attachment #8512148 - Flags: review?(gpascutto)
Comment on attachment 8512148 [details] [diff] [review] Catch MediaCodec exceptions Review of attachment 8512148 [details] [diff] [review]: ----------------------------------------------------------------- ::: widget/android/GeneratedSDKWrappers.cpp @@ +163,5 @@ > int32_t temp = env->CallIntMethod(wrapped_obj, jDequeueInputBuffer, a0); > + if (env->ExceptionCheck()) { > + env->ExceptionClear(); > + env->PopLocalFrame(nullptr); > + return -255; magic numbers
Attachment #8512148 - Flags: review?(gpascutto) → review+
(In reply to Gian-Carlo Pascutto [:gcp] from comment #2) > Comment on attachment 8512148 [details] [diff] [review] > Catch MediaCodec exceptions > > Review of attachment 8512148 [details] [diff] [review]: > ----------------------------------------------------------------- > > ::: widget/android/GeneratedSDKWrappers.cpp > @@ +163,5 @@ > > int32_t temp = env->CallIntMethod(wrapped_obj, jDequeueInputBuffer, a0); > > + if (env->ExceptionCheck()) { > > + env->ExceptionClear(); > > + env->PopLocalFrame(nullptr); > > + return -255; > > magic numbers Yeah, I'll fix, thanks.
The patch fixes exception handling for several calls, so I marked the others as dups of this one.
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 36
tracking-fennec: ? → 35+
Comment on attachment 8512148 [details] [diff] [review] Catch MediaCodec exceptions Approval Request Comment [Feature/regressing bug #]: bug 1014614 [User impact if declined]: Crashes, assuming bug 1014614 is uplifted [Describe test coverage new/current, TBPL]: Nightly for a week [Risks and why]: Low, only catches exceptions [String/UUID change made/needed]: None
Attachment #8512148 - Flags: approval-mozilla-beta?
Attachment #8512148 - Flags: approval-mozilla-aurora?
Attachment #8512148 - Flags: approval-mozilla-beta?
Attachment #8512148 - Flags: approval-mozilla-beta+
Attachment #8512148 - Flags: approval-mozilla-aurora?
Attachment #8512148 - Flags: approval-mozilla-aurora+
Looks like snorp landed this on Aurora and forgot to mark the bug. https://hg.mozilla.org/releases/mozilla-aurora/rev/ce9444649361
As mentioned in bug 1089261 comment 3, there's been 0 crashes reported in the last week. Marking this bug verified fixed based on crash-stats.
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: