Bug 1089423 - Catch MediaCodec exceptions r=gcp a=lsblakk